Fixed scrollbar inside jbrowse (it was outside of widget in genexpress).

--- a/static/genpackage-jbrowse/less/base.less
+++ b/static/genpackage-jbrowse/less/base.less
@@ -17,7 +17,9 @@
     * {
       box-sizing: initial;
     }
-
+    & > .vertical_scrollbar {
+        position: absolute !important;
+    }
 
     .gen-style-jbrowse & {
         background-color: #fff;
